--- a/src/style/_home.scss
+++ b/src/style/_home.scss
@@ -1,3 +1,20 @@
 .main {
   width: 68%;
 }
+
+.Pagination {
+  background-color: antiquewhite;
+  text-align: center;
+  padding: 2rem 0;
+  p {
+    padding: 0.8rem 0;
+    font-weight: 700;
+  }
+  span {
+    border: 2px solid #26a026;
+    padding: 1rem;
+    display: inline-block;
+    color: #26a026;
+    font-size: 1.3rem;
+  }
+}
