--- a/src/style/_post.scss
+++ b/src/style/_post.scss
@@ -1,6 +1,24 @@
 .post {
-  img {
+  .author-img {
     width: 3rem;
     height: 3rem;
+    border-radius: 50%;
+  }
+  .post-details {
+    padding-left: 0.6rem;
+  }
+  .link {
+    text-decoration: none;
+  }
+  .post-author {
+    padding-bottom: 0.3rem;
+    color: #2a792a;
+    text-transform: capitalize;
+  }
+  .post-time {
+    color: gray;
+  }
+  footer {
+    margin-bottom: 1rem;
   }
 }
