--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,6 +11,7 @@ Import partials
 @import 'post';
 @import 'sidebar';
 @import 'feednav';
+@import 'loader';
 /* ---------------------------------------------------------------
 All Styles
 --------------------------------------------------------------- */
