--- a/src/style/_post.scss
+++ b/src/style/_post.scss
@@ -15,10 +15,47 @@
     color: #2a792a;
     text-transform: capitalize;
   }
+  .heart {
+    width: 1.5rem;
+  }
   .post-time {
     color: gray;
   }
+  .like_btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 0.3rem;
+    height: 2.2rem;
+    border: 1px solid #59cf59;
+  }
+  .post-body {
+    padding: 0.5rem 0;
+    .post-title {
+      color: #413838;
+      font-size: 1.5rem;
+      font-weight: 700;
+    }
+    .post-text {
+      color: gray;
+      font-size: 1.2rem;
+      line-height: 1.2;
+      padding: 0.6rem 0;
+      font-weight: 200;
+    }
+  }
+  .favourites {
+    color: greem;
+  }
+
   footer {
+    margin-bottom: 1rem;
+  }
+  .read-more-btn {
+    display: inline-block;
+    border: none;
+    color: #398d39;
+    outline: none;
     margin-bottom: 1rem;
   }
 }
