--- a/src/style/style.css
+++ b/src/style/style.css
@@ -204,7 +204,6 @@ body {
   margin-top: 5rem;
   border: 2px solid #dbd8d8;
   border-radius: 5px;
-  text-align: center;
 }
 
 .form_section h2 {
@@ -212,6 +211,7 @@ body {
   font-weight: 700;
   color: #4b4949;
   padding-bottom: 1rem;
+  text-align: center;
 }
 
 .form_section a {
@@ -222,6 +222,7 @@ body {
 .form_section p {
   padding-bottom: 1rem;
   font-size: 1.3rem;
+  text-align: center;
 }
 
 .form_section .handleinput {
@@ -239,7 +240,7 @@ body {
   padding-top: 1rem;
 }
 
-.btn_sec button {
+.btn_sec .btn_secondary {
   padding: 0.7rem 1.2rem;
   outline: none;
   border: none;
@@ -247,6 +248,18 @@ body {
   color: aliceblue;
   border-radius: 7px;
   font-size: 1.3rem;
+}
+
+.btn_sec input:disabled {
+  background-color: #c55959;
+  color: aliceblue;
+}
+
+.error {
+  color: red;
+  text-align: left;
+  padding-left: 1rem;
+  font-size: 0.9rem;
 }
 
 .banner {
@@ -273,7 +286,6 @@ body {
 }
 
 .Pagination {
-  background-color: antiquewhite;
   text-align: center;
   padding: 2rem 0;
 }
@@ -289,6 +301,18 @@ body {
   display: inline-block;
   color: #26a026;
   font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.Pagination .active {
+  background-color: #307e30;
+  color: aliceblue !important;
+}
+
+.Pagination .active:hover {
+  background-color: #307e30;
+  color: aliceblue !important;
+  opacity: 0.8;
 }
 
 .post .author-img {
@@ -311,11 +335,60 @@ body {
   text-transform: capitalize;
 }
 
+.post .heart {
+  width: 1.5rem;
+}
+
 .post .post-time {
   color: gray;
 }
 
+.post .like_btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 0 0.3rem;
+  height: 2.2rem;
+  border: 1px solid #59cf59;
+}
+
+.post .post-body {
+  padding: 0.5rem 0;
+}
+
+.post .post-body .post-title {
+  color: #413838;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.post .post-body .post-text {
+  color: gray;
+  font-size: 1.2rem;
+  line-height: 1.2;
+  padding: 0.6rem 0;
+  font-weight: 200;
+}
+
+.post .favourites {
+  color: greem;
+}
+
 .post footer {
+  margin-bottom: 1rem;
+}
+
+.post .read-more-btn {
+  display: inline-block;
+  border: none;
+  color: #398d39;
+  outline: none;
   margin-bottom: 1rem;
 }
 
@@ -357,7 +430,7 @@ body {
 All Styles
 --------------------------------------------------------------- */
 .container {
-  max-width: 60rem;
+  max-width: 70rem;
   margin: 0 auto;
 }
 
