--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -12,6 +12,7 @@ Import partials
 @import 'sidebar';
 @import 'feednav';
 @import 'loader';
+@import 'singlepost';
 /* ---------------------------------------------------------------
 All Styles
 --------------------------------------------------------------- */
