--- a/src/style/style.css
+++ b/src/style/style.css
@@ -414,10 +414,21 @@ body {
 .feed-nav a {
   text-decoration: none;
   color: #287e28;
+  border-bottom: 2px solid #287e28;
+  display: inline-block;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  margin: 1rem 0.5rem 1rem 0;
+}
+
+.feed-nav .active {
+  text-decoration: none;
+  color: #287e28;
   display: inline-block;
   border-bottom: 2px solid #287e28;
   padding-bottom: 0.5rem;
   font-weight: 700;
+  margin: 1rem 0.5rem 1rem 0;
 }
 
 .feed-nav hr {
