--- a/src/style/_feednav.scss
+++ b/src/style/_feednav.scss
@@ -2,7 +2,6 @@
   a {
     text-decoration: none;
     color: #287e28;
-    border-bottom: 2px solid #287e28;
     display: inline-block;
     padding-bottom: 0.5rem;
     font-weight: 700;
@@ -10,9 +9,9 @@
   }
   .active {
     text-decoration: none;
-    color: #287e28;
+    color: #287e28 !important;
     display: inline-block;
-    border-bottom: 2px solid #287e28;
+    border-bottom: 2px solid #287e28 !important;
     padding-bottom: 0.5rem;
     font-weight: 700;
     margin: 1rem 0.5rem 1rem 0;
