--- a/src/style/style.css
+++ b/src/style/style.css
@@ -414,7 +414,6 @@ body {
 .feed-nav a {
   text-decoration: none;
   color: #287e28;
-  border-bottom: 2px solid #287e28;
   display: inline-block;
   padding-bottom: 0.5rem;
   font-weight: 700;
@@ -423,9 +422,9 @@ body {
 
 .feed-nav .active {
   text-decoration: none;
-  color: #287e28;
+  color: #287e28 !important;
   display: inline-block;
-  border-bottom: 2px solid #287e28;
+  border-bottom: 2px solid #287e28 !important;
   padding-bottom: 0.5rem;
   font-weight: 700;
   margin: 1rem 0.5rem 1rem 0;
