--- a/src/style/_feednav.scss
+++ b/src/style/_feednav.scss
@@ -19,7 +19,7 @@
 
   hr {
     border: none;
-    border-bottom: 2px solid #e6e1e1;
+    border-bottom: 2px solid #f0eaea;
     margin-bottom: 1rem;
   }
 }
