--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,6 +13,7 @@ Import partials
 @import 'feednav';
 @import 'loader';
 @import 'singlepost';
+@import 'profile';
 /* ---------------------------------------------------------------
 All Styles
 --------------------------------------------------------------- */
