--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -14,6 +14,8 @@ Import partials
 @import 'loader';
 @import 'singlepost';
 @import 'profile';
+@import 'comment';
+
 /* ---------------------------------------------------------------
 All Styles
 --------------------------------------------------------------- */
